Checking in bug 79898 for jesse@netscape.com r=pink, akkana, sr=blake